add configuracion id estatus, relaciones y modelo y documentacion metodo delete servicios
